# transcription-platform

./: .env.example  README.md  alembic.ini  main.py  pyproject.toml
deploy/: docker-compose.yml
docs/: ARCHITECTURE.md  learning-notes.md
migrations/: env.py
migrations/versions/: 2c594e18677e_initial_models.py  91b8d9e94cac_initial_models.py
scripts/: __init__.py  create_topics.py
src/api/: main.py
src/api/routes/: health.py
src/shared/: config.py  log.py
src/shared/db/: base.py  models.py
src/shared/kafka/: topics.py
tests/: test_health.py
